k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-web-service
  namespace: nodejs-web
  labels:
    app: nodejs-web
spec:
  selector:
    app: nodejs-web
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
